Finished basic Lab7